# hansa-analytics

./: .gitignore  .replit  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml  replit.md
.agents/memory/: MEMORY.md  ai-insights-architecture.md  hansa-company-config.md  hansa-pagination.md  hansa-tonnage-correctness.md  kravio-theme.md  monorepo-layout.md  multi-company-scope-filter.md  neon-refresh-pattern.md  render-deployment.md  vite-proxy.md
.migration-backup/: .replit  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.migration-backup/backend/: requirements.txt
.migration-backup/backend/alembic/: env.py
.migration-backup/backend/app/: main.py
.migration-backup/backend/app/api/: routes_sales_summary.py
.migration-backup/backend/app/core/: config.py
.migration-backup/backend/app/db/: models.py
.migration-backup/backend/app/schemas/: refresh.py
.migration-backup/backend/app/services/: ai_insights_service.py  analytics_tools.py  master_data_service.py  transaction_service.py
.migration-backup/frontend/: vite.config.ts
.migration-backup/frontend/src/lib/: api.ts
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/hansa-analytics/: package.json
artifacts/hansa-analytics/.replit-artifact/: artifact.toml
artifacts/hansa-analytics/src/: App.tsx  (+1 more)
attached_assets/: Pasted-Best-way-treat-those-customer-codes-as-a-maintained-int_1780475060434.txt  Pasted-Here-s-the-revised-Replit-prompt-updated-to-make-clear-_1780459365975.txt  Pasted-We-are-building-a-professional-analytics-dashboard-app-_1780438507283.txt
backend/: .env  .env.example  alembic.ini  docker-compose.yml  requirements.txt  run_master_data.py  run_refresh.py
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: test_copilot.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+73 files in other folders)
