[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "apscheduler==3.10.4",
    "certifi==2026.5.20",
    "click==8.4.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.136.3",
    "greenlet==3.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.8.0",
    "httpx==0.28.1",
    "idna==3.17",
    "jinja2==3.1.6",
    "mako==1.3.12",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "numpy==2.4.6",
    "openai==2.37.0",
    "pandas==3.0.3",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.30",
    "pyyaml==6.0.3",
    "rich==15.0.0",
    "six==1.17.0",
    "sqlalchemy==2.0.50",
    "starlette==1.2.1",
    "typer==0.26.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "uvicorn==0.48.0",
    "watchfiles==1.2.0",
    "websockets==16.0",
]
