[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.40.0",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
